# constrained-music

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  TEST_ACCOMPANIMENT.md  WESTERN_MUSIC_RULES.md  pyproject.toml
.github/workflows/: ci.yml
data/: masterpieces.json
examples/: simple_melody.pi
picat/: accompaniment.pi  advanced.pi  basic.pi  chord_generator.pi  companion.pi  constraint_registry.pi  constraint_selector.pi  diagnostics.pi  emotional_constraints.pi  export_pieces.pi  form.pi  genre_profiles.pi  harmonic.pi  harmonizer.pi  humanize.pi  interval_profiles.pi  interval_stats.pi  intervals.pi  main.pi  melody.pi  melody.qi  midi_export.pi  midi_import.pi  midi_utils.pi  mood.pi  mood_mapping.pi  motif.pi  music_constraints.pi  music_types.pi  music_types.qi  ornaments.pi  pieces_bach.pi  pieces_beethoven.pi  refiner.pi  rhythmic.pi  rng.pi  scale_utils.pi  scale_utils.qi  soft_constraints.pi  temporal.pi  (+30 more)
picat/constraints/: basic.pi
picat/famous_pieces/: piece_utils.pi  pieces_folk.pi  pieces_mozart.pi
picat/generators/: melody.pi
picat/utils/: midi_utils.pi
scripts/: audio_render.py  batch_render.sh  evaluate.py  lilypond_writer.py  midi_reader.py  midi_writer.py  musicxml_writer.py  run_all_tests.sh  run_picat.sh  run_web.sh  sampler_writer.py
tests/: test_music_types.pi
web/: requirements.txt  server.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js  constraint-panel.js  genre-selector.js  library.js  mood-pad.js  piano-roll.js  playback.js  timeline.js  variation.js
